[gd_scene load_steps=2 format=3 uid="uid://eb9j0k1l2m3n4"]

[ext_resource type="Script" path="res://scripts/ui/game_hud.gd" id="1"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1")

[node name="TopBar" type="PanelContainer" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 50.0
grow_horizontal = 2

[node name="HBoxContainer" type="HBoxContainer" parent="TopBar"]
layout_mode = 2

[node name="GoldLabel" type="Label" parent="TopBar"]
layout_mode = 2
text = "Gold: 500"
vertical_alignment = 1

[node name="Spacer1" type="Control" parent="TopBar/HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="WaveLabel" type="Label" parent="TopBar"]
layout_mode = 2
text = "Wave: 0"
vertical_alignment = 1

[node name="Spacer2" type="Control" parent="TopBar/HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="HealthLabel" type="Label" parent="TopBar"]
layout_mode = 2
text = "Base HP: 100"
vertical_alignment = 1

[node name="TowerPanel" type="PanelContainer" parent="."]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -200.0
offset_bottom = 200.0
grow_horizontal = 0
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="TowerPanel"]
layout_mode = 2

[node name="Title" type="Label" parent="TowerPanel/VBoxContainer"]
layout_mode = 2
text = "TOWERS"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="TowerPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="BasicTowerButton" type="Button" parent="TowerPanel/VBoxContainer"]
layout_mode = 2
text = "Basic Tower
Cost: 100
Dmg: 15 | Rng: 150"

[node name="SniperTowerButton" type="Button" parent="TowerPanel/VBoxContainer"]
layout_mode = 2
text = "Sniper Tower
Cost: 200
Dmg: 50 | Rng: 300"

[node name="CannonTowerButton" type="Button" parent="TowerPanel/VBoxContainer"]
layout_mode = 2
text = "Cannon Tower
Cost: 300
Dmg: 30 (AOE) | Rng: 180"

[node name="WaveButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -60.0
offset_right = 100.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
text = "Start Next Wave"

[node name="MenuButton" type="Button" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -50.0
offset_right = 110.0
offset_bottom = -10.0
grow_vertical = 0
text = "Menu"
